# treevis

./: .gitignore  LICENSE  README.md  pyproject.toml
src/treevis/: __init__.py  bt.py  colors.py  node.py
